--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "mahsa",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "config": "^3.3.9",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0"
   },
   "devDependencies": {
