--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "config": "^3.3.9",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.1.0"
+    "mongoose": "^7.1.0",
+    "node-fetch": "^2.6.11"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
